--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.port=9898
+spring.rabbitmq.host=toad.rmq.cloudamqp.com
+spring.rabbitmq.username=yobiioxi
+spring.rabbitmq.virtual-host=yobiioxi
+spring.rabbitmq.password=amqp://yobiioxi:Q2dr_LEkkHhamyyTpyNQAayzjz-2p3hX
+
